[metadata]
name = dls_dependency_tree
version = file: dls_dependency_tree/VERSION
 
[options]
zip_safe = False
packages = dls_dependency_tree
install_requires =
    dls_ade == 0.16
 
[options.package_data]
dls_dependency_tree = VERSION
 
[options.entry_points]
console_scripts =
    dls-dependency-checker.py = dls_dependency_tree.dependency_checker:dependency_checker
