[metadata]
name = dls_dependency_tree
version = file: dls_dependency_tree/VERSION
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = dls_dependency_tree
install_requires =
    dls_ade
    sphinx-rtd-theme
    pyqt5

[options.extras_require]
dev =
    pytest
    pytest-mypy
    pytest-flake8
    pytest-black
    mypy
    types-pyyaml
    types-mock >=4.0
    isort >5.0
    flake8
    flake8-isort
    black ==19.10b0
    typing-extensions
    importlib-metadata
    pydocstyle

[options.package_data]
dls_dependency_tree = VERSION

[options.packages.find]
# Don't include our tests directory in the distribution
exclude = tests

[options.entry_points]
console_scripts =
    dls-dependency-checker.py = dls_dependency_tree.dependency_checker:dependency_checker

[isort]
profile=black
float_to_top=true
skip=setup.py,conf.py,build

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    E203,  # See https://github.com/PyCQA/pycodestyle/issues/373
    F811, # support typing.overload decorator
    F722, # allow Annotated[typ, some_func("some string")]

[_ldap]
# library_dirs = /opt/openldap-2.4/lib
# include_dirs = /opt/openldap-2.4/include /usr/include/sasl

extra_compile_args = -g
extra_objects =

libs = ldap_r lber sasl2 ssl crypto
