[metadata]
name = dls_dependency_tree
author = Oliver Copping
author_email = oliver.copping@diamond.ac.uk
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
python_requires = >=3.7
packages = find:
# =src is interpreted as {"": "src"}
# as per recommendation here https://hynek.me/articles/testing-packaging/
package_dir =
    =src

# Specify any package dependencies below.
install_requires =
    # Version is limited to what the build server can provide
    pyqt5==5.12.2
    dls_ade>=2.4.1
    sphinx <4.5.0
    sphinx-rtd-theme

[options.extras_require]
dev =
    pytest
    pytest-mypy
    pytest-flake8
    pytest-black
    mypy
    types-pyyaml
    types-mock >=4.0
    isort >5.0
    flake8
    flake8-isort
    black ==19.10b0
    typing-extensions
    importlib-metadata<=4.3
    pydocstyle

[options.packages.find]
where = src
# Don't include our tests directory in the distribution
exclude = tests

[options.entry_points]
console_scripts =
    dls-dependency-checker = dls_dependency_tree.__main__:main

[isort]
profile=black
float_to_top=true
skip=setup.py,conf.py,build

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    E203,  # See https://github.com/PyCQA/pycodestyle/issues/373
    F811, # support typing.overload decorator
    F722, # allow Annotated[typ, some_func("some string")]

[_ldap]
# library_dirs = /opt/openldap-2.4/lib
# include_dirs = /opt/openldap-2.4/include /usr/include/sasl

extra_compile_args = -g
extra_objects =

libs = ldap_r lber sasl2 ssl crypto
